vlib/v/checker/tests/mod_name_duplicate_var_err.vv
module foo

fn bar() {
	foo := 'bar'
	println(foo)
}
